--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <!-- headerセクション -->
 <picture class="fv__image">
             <source media="(min-width: 768px)" srcset="./img/pc-fv__bg.png">
-            <img src="./img/sp-fv__bg.png" alt="">
+            <img src="./sp-fv__bg.png" alt="">
 </picture>
 <header class="header">
     <div class="header__inner inner">
