--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="header__inner inner">
         <div class="header__content">
             <h1 class="header__logo">
-                <a href="/"><img src="./img/header_logo.png" alt="estate-tohoku"></a>
+                <a href="/"><img src="./header_logo.png" alt="estate-tohoku"></a>
             </h1>
                 <button id="js-drawer-button" type="button" class="header__icon drawer-icon">
                     <span class="drawer-icon__bar"></span>
@@ -59,8 +59,8 @@
                 <div class="fv__message-right">
                     <div class="fv__logo"><img src="./img/fv__logo.png" alt=""></div>
                     <div class="fv__circle">
-                        <div class="fv__circle1"><img src="./img/fv__circle1.png" alt=""></div>
-                        <div class="fv__circle2"><img src="./img/fv__circle2.png" alt=""></div>
+                        <div class="fv__circle1"><img src="./fv__circle1.png" alt=""></div>
+                        <div class="fv__circle2"><img src="./fv__circle2.png" alt=""></div>
                     </div>
                 </div>
                 <div class="fv__message-left">
@@ -92,29 +92,29 @@
     <div class="worries__inner inner">
         <h2 class="worries__head">こんな<span class="worries__head-large">お悩み</span><br>ありませんか？</h2>
         <div class="worries__content section__content">
-            <div class="worries__image"><img src="./img/worries__man.png" alt=""></div>
+            <div class="worries__image"><img src="./worries__man.png" alt=""></div>
             <div class="worries__messages">
-                <div class="worries__message1"><img src="./img/worries__coment1.png" alt=""></div>
-                <div class="worries__message2"><img src="./img/worries__coment2.png" alt=""></div>
-                <div class="worries__message3"><img src="./img/worries__coment3.png" alt=""></div>
-                <div class="worries__message4"><img src="./img/worries__coment4.png" alt=""></div>
+                <div class="worries__message1"><img src="./worries__coment1.png" alt=""></div>
+                <div class="worries__message2"><img src="./worries__coment2.png" alt=""></div>
+                <div class="worries__message3"><img src="./worries__coment3.png" alt=""></div>
+                <div class="worries__message4"><img src="./worries__coment4.png" alt=""></div>
             </div>
         </div>
-        <div class="worries__logo"><img src="./img/worries__logo2.png" alt=""></div>
+        <div class="worries__logo"><img src="./worries__logo2.png" alt=""></div>
     </div>
-    <div class="worries__polygon"><img src="./img/worries__Polygon 2.png" alt=""></div>
+    <div class="worries__polygon"><img src="./worries__Polygon 2.png" alt=""></div>
 </section>
 <!-- pointsセクション -->
 <section id="points" class="points section">
     <div class="points__inner inner">
         <div class="points__cards section__content">
             <div class="points__card1">
-                <div class="points__head1"><img src="./img/point1.png" alt=""></div>
+                <div class="points__head1"><img src="./point1.png" alt=""></div>
                 <div class="points__card feature-card">
                     <p class="points-card__title title1">東北地方<span class="card-large">最大</span>の物件数を所有</p>
                     <div class="points-card__body">
                         <p class="points-card__text text1">東北地方最大の３万件もの物件数を誇る我が社。<br>東北最大都市の仙台で創業して47年の実績と信頼を築き上<br >げました。特に仙台・盛岡・福島の繁華街に多くの物件を多数<br class="hidden-md">ご用意しております。</p>
-                        <div class="points-card__image image1"><img src="./img/points__point1.png" alt=""></div>
+                        <div class="points-card__image image1"><img src="./points__point1.png" alt=""></div>
                     </div>
                 </div>
             </div>
@@ -124,7 +124,7 @@
                     <p class="points-card__title2"><span class="card-large2">無料ご相談</span>と内見で最良の物件をご提案</p>
                     <div class="points-card__body">
                         <p class="points-card__text text2">無料のご相談でも、希望の地域と<br class="hidden-md">お客様の事業内容に丁寧にお伺い<br class="hidden-md">し、弊社把握する物件から最適な<br class="hidden-md">物件をご案内いたします。物件探<br class="hidden-md">しに重要なご相談を大切にしてお<br class="hidden-md">ります。ご成約まで最短でのやり<br class="hidden-md">とりとなるようご手配いたします。</p>
-                        <div class="points-card__image image2"><img src="./img/points__point2.png" alt=""></div>
+                        <div class="points-card__image image2"><img src="./points__point2.png" alt=""></div>
                     </div>
                 </div>
             </div>
@@ -134,7 +134,7 @@
                     <p class="points-card__title3">各地域の<span class="card-large3">専門スタッフ</span>がご対応</p>
                     <div class="points-card__body">
                         <p class="points-card__text text3">各地域の店舗スタッフは、物<br class="hidden-md">件ご紹介のエキスパートです。<br>お客様の事業とご紹介する物<br class="hidden-md">件を、その物件の特徴だけで<br>はなく、地理的特徴や周辺環<br class="hidden-md">境も踏まえてご紹介が可能です。</p>
-                        <div class="points-card__image image3"><img src="./img/points__point3.png" alt=""></div>
+                        <div class="points-card__image image3"><img src="./points__point3.png" alt=""></div>
                     </div>
                 </div>
             </div>
@@ -147,9 +147,9 @@
         <h2 class="heading-estate section__head">おすすめ<br><span class="estate-large">テナント物件</span></h2>
         <div class="estates__cards section__content" href="">
             <div class="estates__card1">
-                <div class="estates__card1-head"><img src="./img/estate__head-iwate.png" alt=""></div>
+                <div class="estates__card1-head"><img src="./estate__head-iwate.png" alt=""></div>
                 <div class="estates__card products-card">
-                    <div class="estates-card__image"><img src="./img/recomends__iwate.png" alt=""></div>
+                    <div class="estates-card__image"><img src="./recomends__iwate.png" alt=""></div>
                     <div class="estates-card__body">
                         <div class="estates-card__price">
                             <p class="estates-card__price1">賃料</p>
@@ -166,7 +166,7 @@
             <div class="estates__card2">
                 <div class="estates__card2-head"><img src="./img/estate__head-miyagi.png" alt=""></div>
                 <div class="estates__card products-card" href="">
-                    <div class="estates-card__image"><img src="./img/recomends__sendai.png" alt=""></div>
+                    <div class="estates-card__image"><img src="./recomends__sendai.png" alt=""></div>
                     <div class="estates-card__body">
                         <div class="estates-card__price">
                             <p class="estates-card__price1">賃料</p>
@@ -183,7 +183,7 @@
             <div class="estates__card3">
                 <div class="estates__card3-head"><img src="./img/estate__head-yamagata.png" alt=""></div>
                 <div class="estates__card products-card" href="">
-                    <div class="estates-card__image"><img src="./img/recomends__yamagata.png" alt=""></div>
+                    <div class="estates-card__image"><img src="./recomends__yamagata.png" alt=""></div>
                     <div class="estates-card__body">
                         <div class="estates-card__price">
                             <p class="estates-card__price1">賃料</p>
@@ -206,11 +206,11 @@
         <h2 class="heading-service section__head">ご成約までの流れ</h2>
         <div class="service__cards section__content">
             <div class="service__card">
-                <div class="service-card__number"><img src="./img/service__number1.png" alt=""></div>
+                <div class="service-card__number"><img src="./service__number1.png" alt=""></div>
                 <div class="service-card__body1">
                     <div class="service-card__content1">
                         <h3 class="service-card__title1">ご予約</h3>
-                        <div class="service-card__image1"><img src="./img/service__step1.png" alt=""></div>
+                        <div class="service-card__image1"><img src="./service__step1.png" alt=""></div>
                     </div>
                     <div class="service-card__texts1">
                         <p class="service-card__text1">お客様の事業内容や希望<br>立地など、まずはお気軽<br>にご相談ください。</p>
@@ -219,10 +219,10 @@
                 </div>
             </div>
         <div class="service__card">
-            <div class="service-card__number"><img src="./img/service__number2.png" alt=""></div>
+            <div class="service-card__number"><img src="./service__number2.png" alt=""></div>
             <h3 class="service-card__title">ご相談・ご内見</h3>
             <div class="service-card__body">
-                <div class="service-card__image2"><img src="./img/service__step2.png" alt=""></div>
+                <div class="service-card__image2"><img src="./service__step2.png" alt=""></div>
                 <div class="service-card__texts">
                     <p class="service-card__text">ご希望内容から、さらに<br class="hidden-md">詳細な内容をお伺いい<br class="hidden-md">たします。</p>
                     <p class="service-card__text">ご希望の内容に近い物件<br class="hidden-md">をすぐにご内見までご案<br class="hidden-md">内も可能です。</p>
@@ -230,7 +230,7 @@
             </div>
         </div>
         <div class="service__card">
-            <div class="service-card__number"><img src="./img/service__number3.png" alt=""></div>
+            <div class="service-card__number"><img src="./service__number3.png" alt=""></div>
             <h3 class="service-card__title">お申込み</h3>
             <div class="service-card__body">
                 <div class="service-card__image3"><img src="./img/service__step3.png" alt=""></div>
@@ -238,18 +238,18 @@
             </div>
         </div>
         <div class="service__card">
-            <div class="service-card__number"><img src="./img/service__number4.png" alt=""></div>
+            <div class="service-card__number"><img src="./service__number4.png" alt=""></div>
             <h3 class="service-card__title">入居審査</h3>
             <div class="service-card__body">
-                <div class="service-card__image4"><img src="./img/service__step4.png" alt=""></div>
+                <div class="service-card__image4"><img src="./service__step4.png" alt=""></div>
                 <p class="service-card__text">お申し込みから最短<br>で2週間程度で審査を<br>いたします。</p>
             </div>
         </div>
         <div class="service__card">
-            <div class="service-card__number"><img src="./img/service__number5.png" alt=""></div>
+            <div class="service-card__number"><img src="./service__number5.png" alt=""></div>
             <h3 class="service-card__title">ご成約</h3>
             <div class="service-card__body">
-                <div class="service-card__image5"><img src="./img/service__step5.png" alt=""></div>
+                <div class="service-card__image5"><img src="./service__step5.png" alt=""></div>
                 <p class="service-card__text">審査を終了しました<br>ら、ご成約となりま<br>す。物件によります<br>が、初月の賃料と敷<br>金・礼金のご準備が<br>必要になります。</p>
             </div>
         </div>
@@ -265,7 +265,7 @@
         <h2 class="heading-staff section__head">スタッフのご紹介</h2>
         <div class="staff__cards">
             <div class="staff__card">
-                <div class="staff-card__image"><img src="./img/staffs__staff1.png" alt=""></div>
+                <div class="staff-card__image"><img src="./staffs__staff1.png" alt=""></div>
                 <div class="staff-card__body">
                     <div class="staff-card__content1">
                         <p class="staff-card__shop">仙台支店</p>
@@ -280,7 +280,7 @@
                 </div>
             </div>
             <div class="staff__card">
-                <div class="staff-card__image"><img src="./img/staffs__staff2.png" alt=""></div>
+                <div class="staff-card__image"><img src="./staffs__staff2.png" alt=""></div>
                 <div class="staff-card__body">
                     <div class="staff-card__content1">
                         <p class="staff-card__shop">盛岡支店</p>
@@ -295,7 +295,7 @@
                 </div>
             </div>
             <div class="staff__card">
-                <div class="staff-card__image"><img src="./img/staffs__staff3.png" alt=""></div>
+                <div class="staff-card__image"><img src="./staffs__staff3.png" alt=""></div>
                 <div class="staff-card__body">
                     <div class="staff-card__content1">
                         <p class="staff-card__shop">山形支店</p>
@@ -310,7 +310,7 @@
                 </div>
             </div>
             <div class="staff__card">
-                <div class="staff-card__image"><img src="./img/staffs__staff4.png" alt=""></div>
+                <div class="staff-card__image"><img src="./staffs__staff4.png" alt=""></div>
                 <div class="staff-card__body">
                     <div class="staff-card__content1">
                         <p class="staff-card__shop">福島支店</p>
@@ -339,7 +339,7 @@
             <p class="footer__card-lead3">24時間365日間いつでもご予約可能です</p>
         </div>
         <ul class="footer__informations">
-            <div class="footer__logo"><a href=""><img src="./img/footer__logo.png" alt="エステート東北"></a></div>
+            <div class="footer__logo"><a href=""><img src="./footer__logo.png" alt="エステート東北"></a></div>
             <li class="footer__information">営業時間：9:00~18:00 （土日祝休）</li>
             <li class="footer__information">住所:宮城県仙台市◯◯区1-2-3</li>
             <li class="footer__information">TEL:000-0000-0000</li>
